--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "RadioMouse",
   "license": "MIT",
   "dependencies": {
+    "jquery": "^3.6.4",
     "parcel": "^2.8.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -30,5 +31,11 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "process": "^0.11.10"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/radio-mouse/frontend/issues"
+  },
+  "homepage": "https://github.com/radio-mouse/frontend#readme",
+  "main": ".eslintrc.js",
+  "keywords": []
 }
